--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,5 +4,10 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+//@import '~bootstrap/scss/bootstrap';
+
+#admin-page {
+
+  padding-top: 0px;
+
+}
